--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "license": "MIT",
   "devDependencies": {
     "@types/electron": "^1.6.10",
+    "@types/node": "^20.8.9",
     "electron": "^26.3.0"
   },
   "dependencies": {
     "canvas": "^2.11.2",
-    "typescript": "^2.0.4"
+    "typescript": "^2.0.4",
+    "undici-types": "^5.27.0"
   }
 }
